--- a/site/index.html
+++ b/site/index.html
@@ -74,7 +74,11 @@
               <ul class="nav flex-column">
               </ul>
             </li>
-            <li class="nav-item" data-level="2"><a href="#project-layout" class="nav-link">Project layout</a>
+            <li class="nav-item" data-level="2"><a href="#project-layout-nodejs" class="nav-link">Project layout: NodeJS</a>
+              <ul class="nav flex-column">
+              </ul>
+            </li>
+            <li class="nav-item" data-level="2"><a href="#project-layout-python3" class="nav-link">Project layout: Python3</a>
               <ul class="nav flex-column">
               </ul>
             </li>
@@ -89,17 +93,20 @@
 <p>A Documentary for Zalix Hosting Service</p>
 <h2 id="programming-languages-available">Programming Languages available</h2>
 <ul>
-<li><code>mkdocs new [dir-name]</code> - Create a new project.</li>
-<li><code>mkdocs serve</code> - Start the live-reloading docs server.</li>
-<li><code>mkdocs build</code> - Build the documentation site.</li>
-<li><code>mkdocs -h</code> - Print help message and exit.</li>
+<li><code>NodeJS</code> - Latest NodeJS version</li>
+<li><code>Python 3</code> - Latest Python version</li>
 </ul>
-<h2 id="project-layout">Project layout</h2>
-<pre><code>mkdocs.yml    # The configuration file.
-docs/
-    index.md  # The documentation homepage.
-    ...       # Other markdown pages, images and other files.
-</code></pre></div>
+<h2 id="project-layout-nodejs">Project layout: <code>NodeJS</code></h2>
+<ul>
+<li>package.json </li>
+<li>package-lock.js</li>
+<li>app.js (can be anything)</li>
+</ul>
+<h2 id="project-layout-python3">Project layout: <code>Python3</code></h2>
+<ul>
+<li>requirements.txt</li>
+<li>bot.py</li>
+</ul></div>
             </div>
         </div>
 
@@ -180,5 +187,5 @@ docs/
 
 <!--
 MkDocs version : 1.4.2
-Build Date UTC : 2023-03-04 07:07:11.459014+00:00
+Build Date UTC : 2023-03-04 07:16:43.692463+00:00
 -->
